--- a/src/components/styles/template3.css
+++ b/src/components/styles/template3.css
@@ -1,8 +1,8 @@
-.container {
+.container3 {
     background-color: rgb(249, 249, 249);
 }
 
-.section1 {
+.section31 {
     /* color: rgb(0, 0, 0); */
     background-color: rgb(255, 255, 255);
     width: 100%;
@@ -11,7 +11,7 @@
     justify-content: space-between;
 }
 
-.personal-info p {
+.personal-info3 p {
     width: 70%;
 
     font-size: 1rem;
@@ -20,7 +20,7 @@
 
 }
 
-.section2 {
+.section32 {
     background-color: rgb(255, 255, 255);
     width: 100%;
     align-content: center;
@@ -31,7 +31,7 @@
 
 
 
-.section2 h2 {
+.section32 h2 {
     font-size: 2.5rem;
     font-weight: 500;
     color: rgb(82, 82, 82);
@@ -39,19 +39,19 @@
 
 }
 
-.projectsandskill {
+.projectsandskill3 {
     display: flex;
     background-color: rgb(255, 255, 255);
     justify-content: space-between;
 }
 
-.section4 {
+.section34 {
     background-color: rgb(222, 222, 222);
     /* height: 20px; */
     /* background-image: ""; */
 }
 
-.section4 h2 {
+.section34 h2 {
     font-size: 2.5rem;
     font-weight: 500;
     color: rgb(82, 82, 82);
@@ -59,7 +59,7 @@
     text-align: center;
 }
 
-.skill {
+.skill3 {
     /* margin-left: 90px; */
     margin-top: 20px;
     width: 90%;
@@ -67,7 +67,7 @@
 }
 
 
-.skill h2 {
+.skill3 h2 {
     font-size: 1.5rem;
     /* border: 1px solid; */
     margin: 0;
@@ -75,14 +75,14 @@
 
 }
 
-.projimg {
+.projimg3 {
     height: 600px;
     width: 600px;
     margin-left: 150px;
     margin-top: 100px;
 }
 
-.card {
+.card3 {
     height: 200px;
     margin-left: 90px;
     background-color: rgb(200, 211, 220);
@@ -91,21 +91,21 @@
 
 
 
-.personal-info h2 {
+.personal-info3 h2 {
     font-size: 2rem;
     font-weight: 400;
     color: rgb(0, 0, 0);
     margin: 0;
 }
 
-.personal-info h3 {
+.personal-info3 h3 {
     font-size: 3rem;
     font-weight: 800;
     color: rgb(134, 54, 54);
     margin: 0 0 2% 0;
 }
 
-.info-P {
+.info-P3 {
     margin-top: 120px;
     margin-left: 140px;
     /* margin-right: 20px; */
@@ -115,7 +115,7 @@
     color: rgb(0, 0, 0);
 }
 
-.img-mail {
+.img-mail3 {
     width: 600px;
     height: 600px;
     margin-top: -60px;
@@ -123,20 +123,20 @@
 
 }
 
-.experience {
+.experience3 {
     display: flex;
     justify-content: space-between;
     /* width: 800px; */
     margin-top: 50px;
 }
 
-.experience img {
+.experience3 img {
     width: 800px;
     height: 600px;
 
 }
 
-.section3 {
+.section33 {
     width: 100%;
     background-color: rgb(255, 255, 255);
     /* margin-left: 70px; */
