--- a/src/components/styles/template2.css
+++ b/src/components/styles/template2.css
@@ -1,70 +1,75 @@
-.container {
+.container2 {
     width: 100%;
     background-color: white;
 
 }
 
-.section1 {
+.section21 {
     background-color: #ffffff;
     padding: 2%;
     margin: 0% 0% 0% 0%;
 
 }
 
-.personal-info {
+.personal-info2 {
     display: flex;
     justify-content: space-between;
     width: 85%;
-    margin: auto;
+    margin: 10px 10px 10px 70px;
 }
 
-.info-P p {
+.info-P2 {
+    margin: 50px 0px 0px 80px;
+}
+
+.info-P2 p {
     width: 50%;
-    font-size: 0.9rem;
+    font-size: 1.1rem;
 }
 
-.personal-info h2 {
+.info-P2 h2 {
     font-size: 3rem;
     font-weight: bold;
     color: rgb(177, 80, 80);
     margin: 0;
 }
 
-.personal-info h3 {
+.info-P2 h1 {
+    font-size: 1.2rem;
+    font-weight: 400;
+    color: rgb(94, 82, 82);
+    margin: 0;
+}
+
+.info-P2 h3 {
     font-size: 1.9rem;
     font-weight: 400;
     color: rgb(134, 54, 54);
     margin: 0 0 2% 0;
 }
 
-
-
-
-
-
-
 /* Section 2 */
 
-.section2 {
-    padding: 2%;
-    margin: 0% 0% 0% 0%;
+.section22 {
+
+    margin: -6% 0% 2% 0%;
     background-color: #ffffff;
 }
 
-.project {
+.project2 {
     width: 85%;
 }
 
-.section2 h2 {
+.section22 h2 {
     text-align: center;
     font-size: 2.5rem;
     font-weight: 500;
     color: rgb(82, 82, 82);
-    margin: 1% 0 2% 0;
+    margin-bottom: 20px;
 
 }
 
-.card {
+.card2 {
     justify-content: space-around;
     width: 100%;
     margin: 2% 0% 0% 25%;
@@ -72,13 +77,13 @@
 
 /* section 3  */
 
-.section3 {
+.section23 {
     padding: 2%;
     margin: 0% 0% 0% 0%;
     background-color: #ffffff;
 }
 
-.section3 h2 {
+.section23 h2 {
     text-align: center;
     font-size: 2.5rem;
     font-weight: 500;
@@ -86,14 +91,9 @@
     margin: 1% 0 2% 0;
 }
 
-.experience {
-    width: 85%;
-    margin: auto;
-}
-
-.experience h3 {
-    font-size: 1.5rem;
-    font-weight: 500;
+.experience2 {
+    font-size: 1rem;
     color: rgb(82, 82, 82);
-    margin: 1% 0 2% 0;
+    margin: 1% 0% 2% 8%;
+
 }
