--- a/src/components/styles/template1.css
+++ b/src/components/styles/template1.css
@@ -46,30 +46,90 @@
 
 /* Section 2 */
 
-.section12 {
-  background-color: #f2f3f5;
-}
+
 
 .project1 {
   margin-right: 30%;
 }
 
 .section12 h2 {
-  text-align: center;
+  /* text-align: center; */
   font-size: 2.5rem;
   font-weight: 500;
-  color: rgb(82, 82, 82);
-  margin: 1% 0 2% 0;
+  color: rgb(0, 0, 0);
+  margin: 1% 0 2% 20%;
 
 }
 
 .card1 {
-  margin: 1%;
-  width: 30%;
+  margin-left: 180px;
+  margin-bottom: 20px;
+  background-color: rgb(176, 176, 176);
+  /* width: 30%; */
+  height: 150px;
+
 
 }
 
+.skill1 {
+  margin-left: 10px;
 
+  /* width: ; */
+  /* text-align: center; */
+
+}
+
+.skillhead {
+  margin-left: 8px;
+  font-size: 1rem;
+  /* margin-bottom: 20px; */
+
+  /* width: 30%; */
+  /* height: 150px; */
+
+}
+
+.skills {
+  font-size: 1rem;
+  margin: 0% 0% 0% 0%;
+
+}
+
+.skillCard {
+  background-color: rgba(187, 187, 187, 0.837);
+  width: 120px;
+  color: rgb(7, 7, 7);
+}
+
+.projexskill1 {
+  display: flex;
+  background-color: rgb(107, 104, 104);
+}
+
+.about13 {
+  display: flex;
+  justify-content: space-evenly;
+  margin: 0% 0% 0% 0%;
+  height: 50vh;
+}
+
+.about13 h1 {
+  font-size: 2.5rem;
+  font-weight: 500;
+  color: rgb(0, 0, 0);
+  margin-right: 350px;
+  margin-bottom: 10px;
+}
+
+.img-mail1 {
+  width: 400px
+}
+
+.aboutinfo1 {
+  /* margin-right: 20%; */
+  margin-left: 100px;
+  margin-top: 50px;
+}
 
 
 /* section 3  */
@@ -77,25 +137,36 @@
 .section13 {
   padding: 2%;
   margin: 0% 0% 0% 0%;
-  background-color: #f2f3f5;
+  background-color: #050505;
 }
 
 .section13 h2 {
   text-align: center;
   font-size: 2.5rem;
   font-weight: 500;
-  color: rgb(82, 82, 82);
-  margin: 1% 0 2% 0;
+  color: rgb(195, 195, 195);
+  margin-right: 350px;
+  margin-bottom: 50px;
+}
+
+.section13 p {
+  color: rgb(195, 195, 195);
 }
 
 .experience1 {
 
-  margin: auto;
+  /* margin: auto; */
+  margin-right: 200px;
 }
 
 .experience1 h3 {
   font-size: 1.5rem;
   font-weight: 500;
-  color: rgb(82, 82, 82);
+  color: rgb(169, 169, 169);
   margin: 1% 0 2% 0;
+}
+
+.section14 {
+  /* background-color: #ffffff; */
+  margin: 1% 3% 2% 4%;
 }
